--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -1,4 +1,4 @@
-<div class="col-xs-3 border-input" *ngIf="this.newMaterialData && (this.newMaterialData.length > 0)">
+<div class="col-xs-3 border-input" *ngIf="this.newMaterialData && this.newMaterialData.length > 0">
   <mat-form-field class="example-form-field border-input">
     <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" />
     <button mat-button matSuffix mat-icon-button>
@@ -7,66 +7,63 @@
   </mat-form-field>
 </div>
 
-    <mat-accordion displayMode="flat" multi class="mat-table" *ngIf="this.newMaterialData && this.newMaterialData.length > 0">
-      <section matSort class="mat-header-row blue-background-color-color-white-section">
-        <span class="mat-header-cell" mat-sort-header="name">Name</span>
-        <span class="mat-header-cell" mat-sort-header="estimatedQty">Estimated Quantity</span>
-        <span class="mat-header-cell" mat-sort-header="requestedQuantity">Requested Quantity</span>
-        <span class="mat-header-cell" mat-sort-header="requiredDate">Required Date</span>
-        <span class="mat-header-cell" mat-sort-header="availableQuantity">Available quantity in project</span>
-      </section>
-      <div>
-        <mat-expansion-panel *ngFor="let material of newMaterialData | SearchPipe: searchMaterial:'GlobalMaterial':'materialName'" class="myPanel">
-          <mat-expansion-panel-header class="mat-row material-row">
-            <span class="mat-cell" matTooltip="{{ material.GlobalMaterial.materialName }}">
-              <div class="limited-character global">
-                {{ material.GlobalMaterial.materialName }}
-              </div>
-            </span>
+<mat-accordion displayMode="flat" multi class="mat-table" *ngIf="this.newMaterialData && this.newMaterialData.length > 0">
+  <section matSort class="mat-header-row blue-background-color-color-white-section">
+    <span class="mat-header-cell" mat-sort-header="name">Material Name</span>
+    <span class="mat-header-cell" mat-sort-header="estimatedQty">Estimated Quantity</span>
+    <span class="mat-header-cell" mat-sort-header="requestedQuantity">Requested Quantity</span>
+    <span class="mat-header-cell" mat-sort-header="requiredDate">Required Date</span>
+    <span class="mat-header-cell" mat-sort-header="availableQuantity">Available Stock</span>
+  </section>
+  <div>
+    <mat-expansion-panel *ngFor="let material of newMaterialData | SearchPipe: searchMaterial:'GlobalMaterial':'materialName'" class="myPanel">
+      <mat-expansion-panel-header class="mat-row material-row">
+        <span class="mat-cell" matTooltip="{{ material.GlobalMaterial.materialName }}">
+          <div class="limited-character global">
+            {{ material.GlobalMaterial.materialName }}
+          </div>
+        </span>
 
-            <span class="mat-cell">
-              {{ material.GlobalMaterial.estimatedQty }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span>
-            </span>
-            <span class="mat-cell"
-              >{{ material.GlobalMaterial.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-            >
-            <span class="mat-cell">{{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
-            <span class="mat-cell"
-              >{{
-                material.GlobalMaterial.deliveredQty != null && material.GlobalMaterial.issuedQty != null
-                  ? material.GlobalMaterial.deliveredQty - material.GlobalMaterial.issuedQty
-                  : 0
-              }}
-              <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-            >
-          </mat-expansion-panel-header>
-          <mat-expansion-panel *ngFor="let project of material.GlobalProject" class="myPanel">
-            <mat-expansion-panel-header class="mat-row material-project">
-              <span class="mat-cell" matTooltip="{{ project.Projects.projectName }}">
-                <div class="limited-character global">
-                  {{ project.Projects.projectName }}
-                </div>
-              </span>
-              <span class="mat-cell">
-                {{ project.ProjectEstimatedQnt }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-              >
-              <span class="mat-cell"
-                >{{ project.Projects.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-              >
-              <span class="mat-cell">{{ project.Projects.nearDueDate | date: "dd MMM yyy" }}</span>
-              <span class="mat-cell"></span>
-            </mat-expansion-panel-header>
-            <div *ngFor="let material of project.Projects.indentMaterials">
-              <mat-expansion-panel-header class="mat-row material-project-details">
-                <span class="mat-cell"></span>
-                <span class="mat-cell"></span>
-                <span class="mat-cell">{{ material.quantity }}</span>
-                <span class="mat-cell">{{ material.dueDate | date: "dd MMM yyy" }}</span>
-                <span class="mat-cell"></span>
-              </mat-expansion-panel-header>
+        <span class="mat-cell p-l-40 m-l-20">
+          {{ material.GlobalMaterial.estimatedQty }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span>
+        </span>
+        <span class="mat-cell p-l-40 m-l-20"
+          >{{ material.GlobalMaterial.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+        >
+        <span class="mat-cell">{{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
+        <span class="mat-cell p-l-50"
+          >{{
+            material.GlobalMaterial.deliveredQty != null && material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.deliveredQty - material.GlobalMaterial.issuedQty : 0
+          }}
+          <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+        >
+      </mat-expansion-panel-header>
+      <mat-expansion-panel *ngFor="let project of material.GlobalProject" class="myPanel">
+        <mat-expansion-panel-header class="mat-row material-project">
+          <span class="mat-cell" matTooltip="{{ project.Projects.projectName }}">
+            <div class="limited-character global">
+              {{ project.Projects.projectName }}
             </div>
-          </mat-expansion-panel>
-        </mat-expansion-panel>
-      </div>
-    </mat-accordion>
- 
+          </span>
+          <span class="mat-cell m-l-10" style="padding-left: 32px;">
+            {{ project.ProjectEstimatedQnt }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+          >
+          <span class="mat-cell m-l-10" style="padding-left: 34px;"
+            >{{ project.Projects.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+          >
+          <span class="mat-cell">{{ project.Projects.nearDueDate | date: "dd MMM yyy" }}</span>
+          <span class="mat-cell"></span>
+        </mat-expansion-panel-header>
+        <div *ngFor="let material of project.Projects.indentMaterials">
+          <mat-expansion-panel-header class="mat-row material-project-details">
+            <span class="mat-cell"></span>
+            <span class="mat-cell"></span>
+            <span class="mat-cell" style="padding-left: 32px;">{{ material.quantity }}</span>
+            <span class="mat-cell">{{ material.dueDate | date: "dd MMM yyy" }}</span>
+            <span class="mat-cell"></span>
+          </mat-expansion-panel-header>
+        </div>
+      </mat-expansion-panel>
+    </mat-expansion-panel>
+  </div>
+</mat-accordion>
