--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -1,4 +1,4 @@
-<div class="col-xs-3 border-input" *ngIf="this.newProjectData.length && this.newProjectData.length>0">
+<div class="col-xs-3 border-input" *ngIf="this.newProjectData.length && this.newProjectData.length > 0">
   <mat-form-field class="example-form-field border-input">
     <input matInput placeholder="Search Project" type="search" [(ngModel)]="searchProject" />
     <button mat-button matSuffix mat-icon-button>
@@ -7,56 +7,58 @@
   </mat-form-field>
 </div>
 
-<mat-accordion displayMode="flat" multi class="mat-table" *ngIf="this.newProjectData.length && this.newProjectData.length>0">
+<mat-accordion displayMode="flat" multi class="mat-table" *ngIf="this.newProjectData.length && this.newProjectData.length > 0">
   <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
-    <span class="mat-header-cell" mat-sort-header="name">Name</span>
+    <span class="mat-header-cell" mat-sort-header="name">Material Name</span>
     <span class="mat-header-cell" mat-sort-header="estimatedQuantity">Estimated Quantity</span>
     <span class="mat-header-cell" mat-sort-header="requestedQuantity">Requested Quantity</span>
     <span class="mat-header-cell" mat-sort-header="requiredDate">Required Date</span>
-    <span class="mat-header-cell" mat-sort-header="availableQuantity">Available quantity in project</span>
+    <span class="mat-header-cell" mat-sort-header="availableQuantity">Available Stock</span>
   </section>
 
-<div>
-  <mat-expansion-panel *ngFor="let project of newProjectData | SearchPipe: searchProject:'ProjectGlobal':'projectName'" class="myPanel">
-    <mat-expansion-panel-header class="mat-row material-row">
-      <span class="mat-cell">{{ project.ProjectGlobal.projectName }}</span>
-    </mat-expansion-panel-header>
-
-    <mat-expansion-panel *ngFor="let material of project.GlobalMaterials" class="myPanel">
-      <mat-expansion-panel-header class="mat-row material-project">
-        <span class="mat-cell" matTooltip=" {{ material.GlobalMaterial.materialName }}">
-          <div class="limited-character global">
-            {{ material.GlobalMaterial.materialName }}
-          </div>
-        </span>
-
-        <span class="mat-cell"
-          >{{ material.GlobalMaterial.estimatedQty }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-        >
-        <span class="mat-cell"
-          >{{ material.GlobalMaterial.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-        >
-        <span class="mat-cell">{{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
-        <span class="mat-cell"
-          >{{
-            material.GlobalMaterial.deliveredQty != null && material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.deliveredQty - material.GlobalMaterial.issuedQty : 0
-          }}
-          <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-        >
+  <div>
+    <mat-expansion-panel *ngFor="let project of newProjectData | SearchPipe: searchProject:'ProjectGlobal':'projectName'" class="myPanel">
+      <mat-expansion-panel-header class="mat-row material-row">
+        <span class="mat-cell">{{ project.ProjectGlobal.projectName }}</span>
       </mat-expansion-panel-header>
 
-      <ng-container *ngIf="material.IndentMaterial">
-        <div *ngFor="let indent of material.IndentMaterial">
-          <mat-expansion-panel-header class="mat-row">
-            <span class="mat-cell"></span>
-            <span class="mat-cell"></span>
-            <span class="mat-cell">{{ indent.quantity }}</span>
-            <span class="mat-cell">{{ indent.dueDate | date: "dd MMM yyy" }}</span>
-            <span class="mat-cell"></span>
-          </mat-expansion-panel-header>
-        </div>
-      </ng-container>
+      <mat-expansion-panel *ngFor="let material of project.GlobalMaterials" class="myPanel">
+        <mat-expansion-panel-header class="mat-row material-project">
+          <span class="mat-cell" matTooltip=" {{ material.GlobalMaterial.materialName }}">
+            <div class="limited-character global">
+              {{ material.GlobalMaterial.materialName }}
+            </div>
+          </span>
+
+          <span class="mat-cell p-l-35 m-l-10"
+            >{{ material.GlobalMaterial.estimatedQty }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+          >
+          <span class="mat-cell p-l-35"
+            >{{ material.GlobalMaterial.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+          >
+          <span class="mat-cell">{{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
+          <span class="mat-cell p-l-45 m-l-20"
+            >{{
+              material.GlobalMaterial.deliveredQty != null && material.GlobalMaterial.issuedQty != null
+                ? material.GlobalMaterial.deliveredQty - material.GlobalMaterial.issuedQty
+                : 0
+            }}
+            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+          >
+        </mat-expansion-panel-header>
+
+        <ng-container *ngIf="material.IndentMaterial">
+          <div *ngFor="let indent of material.IndentMaterial">
+            <mat-expansion-panel-header class="mat-row">
+              <span class="mat-cell"></span>
+              <span class="mat-cell"></span>
+              <span class="mat-cell p-l-35">{{ indent.quantity }}</span>
+              <span class="mat-cell">{{ indent.dueDate | date: "dd MMM yyy" }}</span>
+              <span class="mat-cell"></span>
+            </mat-expansion-panel-header>
+          </div>
+        </ng-container>
+      </mat-expansion-panel>
     </mat-expansion-panel>
-  </mat-expansion-panel>
   </div>
 </mat-accordion>
