--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -13,16 +13,17 @@
     </span>
     <span class="col-xs-6">
       <span class="text-semi-bold" *ngIf="mode !== 'edit'; else editDateBlock">
-        P.O. Valid Till: <span class="p-l-5">{{ cardData.poValidUpto | date }}</span>
+        P.O. Valid Till: <span class="p-l-5">{{ cardData.poValidUpto | date: "dd-MMM-yyy" }}</span>
       </span>
       <ng-template #editDateBlock>
         <span class="text-semi-bold">
-          P.O. Valid Till:
+          P.O. Valid Till: 
           <mat-form-field class="border-input">
-            <input matInput formControlName="endDate" [matDatepicker]="endDate" placeholder="Valid Till" (focus)="endDate.open()" readonly />
+            <input #dateinput matInput formControlName="endDate" [matDatepicker]="endDate" placeholder="Valid Till" (focus)="endDate.open()" readonly />
             <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
             <mat-datepicker #endDate startView="month"></mat-datepicker>
           </mat-form-field>
+         
         </span>
       </ng-template>
     </span>
