User Guide Integration Started Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -135,7 +135,7 @@
                     <div class="font-size12 color-text-card p-l-15 p-t-5">
                       Purchase Orders <br>
                       <span class="font-size14 purchase-amount" *ngIf="projectDetails.purchaseOrderCost">
-                        ₹{{ projectDetails.purchaseOrderCost  | number : '1.2-2' }} Cr
+                        ₹ {{ projectDetails.purchaseOrderCost | number : '1.2-2' }}
                       </span>
                     </div>
                     <!-- <div class="font-size14   text-right p-l-25 m-t-15">
