--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -497,3 +497,7 @@ mat-accordion {
     .signupForm-error-msg.green-colour{
       color:#569414;
   }
+.material-info{
+  padding-top: 8px;
+  font-size: 16px;
+}
