--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -109,7 +109,7 @@
   <div mat-dialog-actions>
     <div class="col-sm-12 text-align-center">
       <small   class="error-msg" *ngIf="errorMsg">
-        Sum of issued quantities should be less than the quantities in available stock.
+        Sum of 'To be issued' quantities should be less than available stock.
       </small>
     </div>
     <div class="col-sm-12 save-btn-add-edit-user-modal">
