--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -7,7 +7,7 @@
       <div class="col-sm-12 m-t-5 text-right">
         <div *ngIf="this.mode === 'edit'">
           <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn" (click)="selectApprover()" [disabled]="!isPoValid">
-            Send For Approval
+            Send P.O For Approval
           </button>
         </div>
         <div *ngIf="this.mode === 'requiredApproval'">
