--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -140,7 +140,9 @@
                     </div>
                 </div>
 
-                <div class="approvals py-4 bg-white">
+                <!--- Will implement later once api is ready -->
+                
+                <!-- <div class="approvals py-4 bg-white">
                     <div class="row">
                         <div class="col-md-12">
                             <h6 class="px-4">Approvals</h6>
@@ -183,7 +185,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="col-md-3">
