--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -273,19 +273,33 @@ body, .bg-gray, .mat-drawer-content{
 }
 
 .date-label {
-  // .mat-form-field-label{
-  //   position: absolute;
-  //   top: 0;
-  //   font-size: 12px;
-  //   font-weight: 500;
-  // }
   .mat-form-field-label-wrapper{
     overflow: visible;
     top: -28px;
   }
+
   .mat-form-field-infix{
     border-bottom: 2px solid #b8b8b8;
     padding-top: 36px !important;
     line-height: 36px;
+  }
+
+  .mat-datepicker-toggle-default-icon{
+    margin-top: -15px;
+  }
+}
+
+.date-label.mat-form-field-should-float{
+  .mat-form-field-label-wrapper {
+    top: -13px;
+  }
+
+  .mat-form-field-infix{
+    padding-top: 11px !important;
+    line-height: 25px;
+  }
+
+  .mat-datepicker-toggle-default-icon {
+    margin-top: 0px;
   }
 }
